--- a/tests/dummy/app/templates/navbar.hbs
+++ b/tests/dummy/app/templates/navbar.hbs
@@ -2,13 +2,13 @@
 
   <div class="nav-wrapper container">
 
+    {{link-to "ember-cli-tetris" "index" id="logo-container" class="brand-logo center"}}
+
     <a href="#" data-activates="nav-mobile" class="button-collapse" id="js-nav-mobile-collapse">
       <i class="material-icons">menu</i>
     </a>
 
-    {{link-to "ember-cli-tetris" "index" id="logo-container" class="brand-logo"}}
-
-    <a id="cs-github-logo" target="_blank" href="https://github.com/ahab-io/ember-cli-tetris">
+    <a id="cs-github-logo" class="right" target="_blank" href="https://github.com/ahab-io/ember-cli-tetris">
       {{inline-svg "github"}}
     </a>
 
