--- a/tests/dummy/app/styles/navbar.scss
+++ b/tests/dummy/app/styles/navbar.scss
@@ -1,32 +1,15 @@
-nav {
+nav div {
   z-index: 1000;
 }
 
 nav svg {
   width: auto;
-  height: 100%;
+  min-height: 100%;
+  max-width: 100%;
   fill: #fff;
-  padding: 30% 0;
+  padding: 25% 0;
 }
 
-nav .brand-logo {
-  left: 50%;
-  transform: translateX(-50%);
+nav ul, nav li, nav a {
+  height: 100%;
 }
-
-nav #cs-github-logo {
-  float: right;
-  position: relative;
-  height: 56px;
-  font-size: 2.7rem;
-  line-height: 56px;
-  z-index: 1;
-}
-
-@media only screen and (min-width: 993px) {
-  nav #cs-github-logo {
-    height: 64px;
-    line-height: 64px;
-  }
-}
-
