--- a/addon/templates/components/tetris-piece.hbs
+++ b/addon/templates/components/tetris-piece.hbs
@@ -1,7 +1,7 @@
-{{#if child.id}}
+{{#if (and child.id child.save)}}
   {{#unless makingGrandChild}}
     {{#each grandChildren as |grandChild|}}
-      {{#if grandChild.id}}
+      {{#if (and grandChild.id grandChild.save)}}
         {{tetris-block parent=child isTopmostComponent=false model=grandChild}}
       {{/if}}
     {{/each}}
