--- a/addon/templates/components/tetris-grid.hbs
+++ b/addon/templates/components/tetris-grid.hbs
@@ -4,10 +4,10 @@
   </div>
 </div>
 
-{{#if (and child.id child.save)}}
+{{#if child.id}}
   {{#unless makingGrandChild}}
     {{#each grandChildren as |grandChild|}}
-      {{#if (and grandChild.id grandChild.save)}}
+      {{#if grandChild.id}}
         {{tetris-piece parent=child isTopmostComponent=false model=grandChild}}
       {{/if}}
     {{/each}}
